viz: Add workaround for offscreen canvas crash.

Video using surfaces uses the offscreen canvas path. When running with
--enable-viz there is no FrameSinkManagerImpl, which triggers a
NOTREACHED(), and causes failures in viz_content_browsertests.

Add a temporary workaround to not hit the NOTREACHED(). This work around
should be removed before the M65 branch point and fixed correctly.

Bug: 796700
Change-Id: Ieede30e9052671b6e45b3b474c8db855f4309de6
Reviewed-on: https://chromium-review.googlesource.com/837742
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Reviewed-by: Olivia Lai <xlai@chromium.org>
Commit-Queue: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525772}
Former-commit-id: eb40abe1f4a65db4f18619ed0cdf423d89c17e9b